--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-
+apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -44,6 +44,8 @@ dependencies {
     //引入Log拦截器，方便DEBUG模式输出log信息
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     compile 'com.android.support:recyclerview-v7:25.0.0'
+    //glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 repositories {
     mavenCentral()
